syntax = "proto2";
package units.proto;

message Mobility {
  optional uint64 speed_u = 1;
  optional uint64 max_weight_u = 2;
  optional uint64 max_bulk_u = 3;
}

message Template {
  optional uint64 id = 1;
  optional Mobility mobility = 2;
  optional string name = 3;
}
